# wtfjk

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  build.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: build.yml
assets/ext_data/npcs/: sand_creature_bouncy.npc  tyrant.npc
assets/shaders/: tyrant.shader
cmake/Modules/: InstallConfig.cmake  InstallZIP.cmake
code/: CMakeLists.txt
code/cgame/: cg_draw.cpp  cg_ents.cpp  cg_local.h  cg_main.cpp  cg_media.h  cg_mutators.cpp  cg_mutators.h  cg_players.cpp  cg_servercmds.cpp  cg_view.cpp  cg_weapons.cpp
code/game/: AI_BobaFett.cpp  AI_Grenadier.cpp  AI_Howler.cpp  AI_Stormtrooper.cpp  CMakeLists.txt  NPC.cpp  NPC_combat.cpp  NPC_senses.cpp  NPC_spawn.cpp  NPC_utils.cpp  Q3_Interface.cpp  b_local.h  bg_mutators.cpp  bg_mutators.h  bg_panimate.cpp  bg_pmove.cpp  g_active.cpp  g_combat.cpp  g_functions.cpp  g_functions.h  g_fx.cpp  g_local.h  g_main.cpp  g_mutators.cpp  g_mutators.h  g_navigator.cpp  g_public.h  g_shared.h  g_spawn.cpp  g_svcmds.cpp  g_target.cpp  g_utils.cpp  g_weapon.cpp  ghoul2_shared.h  wp_saber.cpp  wp_thermal.cpp  wp_trip_mine.cpp
code/qcommon/: q_shared.h
code/rd-common/: tr_types.h
codeJK2/cgame/: cg_view.cpp  cg_weapons.cpp
codeJK2/game/: AI_Grenadier.cpp  AI_Stormtrooper.cpp  CMakeLists.txt  NPC_combat.cpp  NPC_senses.cpp  NPC_spawn.cpp  NPC_utils.cpp  bg_local.h  bg_panimate.cpp  bg_pmove.cpp  g_main.cpp  g_missile.cpp  g_nav.cpp  g_svcmds.cpp  g_target.cpp  wp_saber.cpp  wp_trip_mine.cpp
shared/qcommon/: q_math.c
(+1 files in other folders)
